tests/lifetime/unborrow/unborrow_of_uninit.err.expected
error: at 5:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'r' is used before initialization
   |
 5 |             unborrow r;
   |             ^^^^^^^^^^
